# ME332_ros2_project

./: .gitignore  README.md
src/final_assignment_moveit_config/: CMakeLists.txt  package.xml
src/final_assignment_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  my_mobile_manipulator.ros2_control.xacro  my_mobile_manipulator.srdf  my_mobile_manipulator.urdf.xacro  ros2_controllers.yaml
src/final_assignment_moveit_config/launch/: final_world.launch.py
src/final_assignment_pkg/: CMakeLists.txt  package.xml
src/final_assignment_pkg/config/: controllers.yaml
src/final_assignment_pkg/launch/: final_world.launch.py  gazebo.launch.py  test.launch.py
src/final_assignment_pkg/scripts/: keyboard_grasp_tuner.py
src/final_assignment_pkg/urdf/: robot.urdf  robot.urdf.xacro
src/final_assignment_pkg/worlds/: me332_final_project_6_0_classic.world  test.sdf  world.sdf
src/final_assignment_pkg/worlds/wall_model/: model.sdf
src/mediapipe_ros2_suite/: .gitignore  LICENSE  NOTICE
src/mediapipe_ros2_suite/src/mediapipe_ros2_interfaces/: CMakeLists.txt  package.xml
src/mediapipe_ros2_suite/src/mediapipe_ros2_interfaces/msg/: Hand.msg  HandGesture.msg  HandLandmarks.msg  PoseLandmarks.msg
src/mediapipe_ros2_suite/src/mediapipe_ros2_node/: CMakeLists.txt  Dockerfile  package.xml
src/mediapipe_ros2_suite/src/mediapipe_ros2_node/launch/: cam_and_mp.launch.py  full_demo.launch.py  hand_demo.launch.py  mp_node.launch.py  viz_demo.launch.py
src/mediapipe_ros2_suite/src/mediapipe_ros2_node/rviz/: hand_demo.rviz  mediapipe_default.rviz
src/mediapipe_ros2_suite/src/mediapipe_ros2_py/: package.xml  setup.cfg  setup.py
src/mediapipe_ros2_suite/src/mediapipe_ros2_py/launch/: mp_node.launch.py
src/mediapipe_ros2_suite/src/mediapipe_ros2_py/mediapipe_ros2_py/: gesture_to_turtlesim.py  hand_node_legacy.py  mp_node.py  two_cams.launch.py
src/my_cartographer/: CMakeLists.txt  package.xml
src/my_cartographer/config/: my_robot_2d.lua
src/my_cartographer/launch/: cartographer.launch.py
src/nav2_mppi/: CMakeList.txt  CMakeLists.txt  package.xml  setup.cfg  setup.py
src/nav2_mppi/launch/: bringup_mppi.launch.py
src/nav2_mppi/maps/: map.pgm  map.yaml
src/nav2_mppi/params/: nav2_params_mppi.yaml
src/simple_voice_teleop/: package.xml  setup.cfg  setup.py
src/simple_voice_teleop/launch/: voice_teleop.launch.py
src/simple_voice_teleop/simple_voice_teleop/: simple_voice_teleop_node.py
src/tb3_gesture_teleop/: gesture_pose_control.py  package.xml  setup.cfg  setup.py
src/tb3_gesture_teleop/launch/: gesture_teleop.launch.py
src/tb3_gesture_teleop/tb3_gesture_teleop/: gesture_teleop_node.py
src/tb3_joy_teleop/: package.xml  setup.cfg  setup.py
src/tb3_joy_teleop/launch/: joy_teleop.launch.py
src/tb3_joy_teleop/tb3_joy_teleop/: joy_to_twist.py
src/voice_asr_vosk/: package.xml  setup.cfg  setup.py
src/voice_asr_vosk/voice_asr_vosk/: asr_vosk_node.py
