<?xml version="1.0"?>
<package format="3">
  <name>nav2_mppi</name>
  <version>0.0.1</version>
  <description>Nav2 bringup config package with MPPI controller</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_mppi_controller</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>