<?xml version="1.0"?>
<package format="3">
  <name>mediapipe_ros2_py</name>
  <version>0.1.0</version>
  <description>Mediapipe ROS2 Python nodes (hand/pose/face)</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>mediapipe_ros2_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- <exec_depend>python3-mediapipe</exec_depend> -->
  <!-- <exec_depend>python3-opencv</exec_depend> -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
